--- a/pong/pong.html
+++ b/pong/pong.html
@@ -13,6 +13,7 @@
 	<script src="Player.js"></script>
 	<script src="Ball.js"></script>
 	<script src="events.js"></script>
+	<script src="time.js"></script>
 	<script src="pong.js"></script>
 </body>
 </html>
