Updated static and media file references to use Django views

--- a/app/frontend/html/index.html
+++ b/app/frontend/html/index.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ft_trascendence</title>
-    <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/styles.css">
-    <script src='/bootstrap/js/bootstrap.min.js'></script>
+    <link rel="stylesheet" href="bootstrap">
+    <link rel="stylesheet" href="styles">
+    <script src='bootstrapjs'></script>
 </head>
 <body>
 <video autoplay muted loop id="bg_video">
-    <source src="../media/LANDING_VIDEO.mp4" type="video/mp4">
+    <source src="bg_landing" type="video/mp4">
 </video>
 <div class="tr_header">
-    <div id="h_logo"><a id="logo_link_override" href="index.html">TRASCENDENCE.</a></div>
+    <div id="h_logo"><a id="logo_link_override" href="index.html">TRANSCENDENCE.</a></div>
     <div class="h_basic">TORNEOS</div>
     <div class="h_basic">PUNTUACIONES</div>
     <a href="register.html"><div id="h_register">REGISTRARSE</div></a>
@@ -23,7 +23,7 @@
     <a href="register.html"><div id="splash_subtitle">¡Demuestra tu habilidad!</div></a>
 </div>
 <div id="splash_center_panel">
-    Unete ahora y empieza a jugar. ¡La diversión y la<br>competición te esperan!
+    Únete ahora y empieza a jugar. ¡La diversión y la<br>competición te esperan!
 </div>
 <div id="games_header">
     <b>Conoce nuestros juegos</b>
@@ -47,13 +47,13 @@
 </div>
 <hr>
 <div id="footer_container">
-    <img id="footer_logo" src="../media/Trascendence_Square_Logo.svg">
-    <p id="footer_credits">FT_Trascendence ha sido creado por el equipo [NOMBRE] para 42 Málaga.<br><br>
-    [NOMBRE 1] - [TRABAJO DESEMPEÑADO]<br>
-    [NOMBRE 2] - [TRABAJO DESEMPEÑADO]<br>
-    [NOMBRE 3] - [TRABAJO DESEMPEÑADO]<br>
-    [NOMBRE 4] - [TRABAJO DESEMPEÑADO]<br>
-    [NOMBRE 5] - [TRABAJO DESEMPEÑADO]</p>
+    <img id="footer_logo" src="logo">
+    <p id="footer_credits">FT_Transcendence ha sido creado por el equipo El Fin de la Cosa para 42 Málaga.<br><br>
+    [NOMBRE 1] - frontend<br>
+    [NOMBRE 2] - frontend<br>
+    [NOMBRE 3] - frontend<br>
+    manujime - backend<br>
+    abeltran - backend</p>
 </div>
 </body>
 </html>
