--- a/app/frontend/TicTacToe/tictactoe.html
+++ b/app/frontend/TicTacToe/tictactoe.html
@@ -8,8 +8,7 @@
         /* Import JetBrains Mono */
         @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap');
 
-        body
-        {
+        body {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -20,13 +19,11 @@
             color: #ffffff;
         }
 
-        .container
-        {
+        .container {
             text-align: center;
         }
 
-        .board
-        {
+        .board {
             display: grid;
             grid-template-columns: repeat(3, 120px);
             grid-template-rows: repeat(3, 120px);
@@ -39,15 +36,14 @@
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
         }
 
-        .cell
-        {
+        .cell {
             width: 120px;
             height: 120px;
             background-color: #ceb7cc;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 3rem; 
+            font-size: 3rem;
             cursor: pointer;
             border-radius: 5px;
             transition: background-color 0.3s;
@@ -55,36 +51,30 @@
             border: 1px solid #ffffff;
         }
 
-        .cell:hover
-        {
-            background-color: #996b94;
-        }
+            .cell:hover {
+                background-color: #996b94;
+            }
 
-        .cell.x
-        {
-            background-color: #2e9843;
-        }
+            .cell.x {
+                background-color: #2e9843;
+            }
 
-        .cell.o
-        {
-            background-color: #d95c41;
-        }
+            .cell.o {
+                background-color: #d95c41;
+            }
 
-        #message
-        {
+        #message {
             margin-top: 20px;
             font-size: 1.8rem;
             font-weight: bold;
             color: #ffc3ff;
         }
 
-        #game-board
-        {
+        #game-board {
             display: none;
         }
 
-        .selection-container
-        {
+        .selection-container {
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -93,31 +83,37 @@
             text-align: center;
         }
 
-        .selection-buttons
-        {
+        .selection-buttons, .difficulty-buttons {
             display: flex;
             gap: 20px;
+            justify-content: center;
+            margin-top: 20px;
         }
 
-        .selection-buttons button
-        {
-            padding: 10px 20px;
-            font-size: 1.5rem;
-            cursor: pointer;
-            border: 1px solid #ffffff;
-            border-radius: 5px;
-            background-color: #ff4eff;
-            color: #ffffff;
-            transition: background-color 0.3s;
+            .selection-buttons button, .difficulty-buttons button {
+                padding: 10px 20px;
+                font-size: 1.5rem;
+                cursor: pointer;
+                border: 1px solid #ffffff;
+                border-radius: 5px;
+                background-color: #ff4eff;
+                color: #ffffff;
+                transition: background-color 0.3s;
+            }
+
+                .selection-buttons button:hover, .difficulty-buttons button:hover {
+                    background-color: #c964cc;
+                }
+
+        #difficulty-screen {
+            display: none;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
 
-        .selection-buttons button:hover
-        {
-            background-color: #c964cc;
-        }
-
-        #current-turn
-        {
+        #current-turn {
             font-size: 1.5rem;
             font-weight: bold;
             margin-bottom: 10px;
@@ -132,6 +128,16 @@
         <div class="selection-buttons">
             <button id="two-players">2 Players</button>
             <button id="one-player">1 Player</button>
+        </div>
+    </div>
+
+    <div class="selection-container" id="difficulty-screen">
+        <h1>Select Difficulty</h1>
+        <div class="difficulty-buttons">
+            <button onclick="startGameWithDifficulty('easy')">Easy</button>
+            <button onclick="startGameWithDifficulty('normal')">Normal</button>
+            <button onclick="startGameWithDifficulty('hard')">Hard</button>
+            <button onclick="startGameWithDifficulty('extreme')">Extreme</button>
         </div>
     </div>
 
@@ -153,18 +159,40 @@
 
     <script>
         document.getElementById('two-players').addEventListener('click', () => {
+            showGameBoard();
             loadGame('tictactoe.js');
         });
 
         document.getElementById('one-player').addEventListener('click', () => {
-            loadGame('tictactoeIA.js');
+            showDifficultySelection();
         });
 
-        function loadGame(scriptName)
+        function showDifficultySelection()
+        {
+            document.getElementById('selection-screen').style.display = 'none';
+            document.getElementById('difficulty-screen').style.display = 'flex';
+        }
+
+        function startGameWithDifficulty(difficulty)
+        {
+            localStorage.setItem('tictactoeDifficulty', difficulty);
+
+            document.getElementById('difficulty-screen').style.display = 'none';
+            showGameBoard();
+
+            const script = document.createElement('script');
+            script.src = 'tictactoeIA.js';
+            document.body.appendChild(script);
+        }
+
+        function showGameBoard()
         {
             document.getElementById('selection-screen').style.display = 'none';
             document.getElementById('game-board').style.display = 'block';
+        }
 
+        function loadGame(scriptName)
+        {
             const script = document.createElement('script');
             script.src = scriptName;
             document.body.appendChild(script);
