--- a/app/frontend/TicTacToe/tictactoe.html
+++ b/app/frontend/TicTacToe/tictactoe.html
@@ -68,6 +68,7 @@
             font-size: 1.8rem;
             font-weight: bold;
             color: #ffc3ff;
+			cursor: pointer;
         }
 
         #game-board {
@@ -156,6 +157,8 @@
         </div>
         <div id="message"></div>
     </div>
+
+	{% csrf_token %}
 
     <script>
         document.getElementById('two-players').addEventListener('click', () => {
