added migrations to backend, language buttons affect header and footer now

--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -10,36 +10,20 @@
     <link rel="stylesheet" href="/css/basic.css">
     <script src='/bootstrap/js/bootstrap.min.js'></script>
     <script src='/js/router-lang.js' defer></script>
-    <script src='/js/profile.js' defer></script>
+  <!-- <script src='/js/profile.js' defer></script> -->
 </head>
 <body>
 <video autoplay muted loop id="bg_video">
     <source src="../media/LANDING_VIDEO.mp4" type="video/mp4">
 </video>
-<div class="tr_header">
-    <div id="h_logo"><a id="logo_link_override" href="#" data-route="/">TRASCENDENCE.</a></div>
-            <!-- --------------- -->
-    <div class="language_switcher_container" id="languageSwitcher">
-        <button class="language-switcher" data-lang="en">EN</button>
-        <button class="language-switcher" data-lang="es">ES</button>
-        <button class="language-switcher" data-lang="fr">FR</button>
-    </div>
-    <div class="h_basic" id="h_tournaments"><a href="#tournaments">TORNEOS</a></div>
-    <div class="h_basic" id="h_scores"><a href="#scores">PUNTUACIONES</a></div>
-    <div id="h_register"> <a href="#register">REGISTRARSE</a></div>
-    <div id="h_login"> <a href="#login">INICIAR SESIÓN</a></div>
+<div class="tr_header" id="header">
+    <!--header here-->
 </div>
 <div id="content">
     <!-- Dynamic content will be loaded here -->
 </div>
 <div id="footer_container"></div>
-    <img id="footer_logo" src="../media/Trascendence_Square_Logo.svg">
-    <p id="footer_credits">FT_Trascendence ha sido creado por el equipo [NOMBRE] para 42 Málaga.<br><br>
-    [NOMBRE 1] - [TRABAJO DESEMPEÑADO]<br>
-    [NOMBRE 2] - [TRABAJO DESEMPEÑADO]<br>
-    [NOMBRE 3] - [TRABAJO DESEMPEÑADO]<br>
-    [NOMBRE 4] - [TRABAJO DESEMPEÑADO]<br>
-    [NOMBRE 5] - [TRABAJO DESEMPEÑADO]</p>
+    <!--footer here-->
 </div>
 </body>
 </html>
