register api working

--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/basic.css">
     <script src='/bootstrap/js/bootstrap.min.js'></script>
+    <script src="js/login.js" defer></script>
     <script src='/js/router-lang.js' defer></script>
-  <!-- <script src='/js/profile.js' defer></script> -->
 </head>
 <body>
 <video autoplay muted loop id="bg_video">
