--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/basic.css">
     <script src='/bootstrap/js/bootstrap.min.js'></script>
+    <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js" defer></script>
     <script src="js/login.js" defer></script>
     <script src='/js/router-lang.js' defer></script>
 </head>
@@ -19,9 +20,13 @@
 <div class="tr_header" id="header">
     <!--header here-->
 </div>
-<div id="content">
-    <!-- Dynamic content will be loaded here -->
+
+<div>
+    <div id="content">
+        <!-- Dynamic content will be loaded here -->
+    </div>
 </div>
+
 <div id="footer_container"></div>
     <!--footer here-->
 </div>
