--- a/app/frontend/html/index.html
+++ b/app/frontend/html/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ft_trascendence</title>
-    <link rel="stylesheet" href="bootstrap">
-    <link rel="stylesheet" href="styles">
-    <script src='bootstrapjs'></script>
+    <link rel="stylesheet" href="frontend/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="frontend/css/styles.css">
+    <script src='frontend/bootstrap/js/bootstrap.min.js'></script>
 </head>
 <body>
 <video autoplay muted loop id="bg_video">
-    <source src="bg_landing" type="video/mp4">
+    <source src="frontend/media/LANDING_VIDEO.mp4" type="video/mp4">
 </video>
 <div class="tr_header">
     <div id="h_logo"><a id="logo_link_override" href="index.html">TRANSCENDENCE.</a></div>
@@ -47,7 +47,7 @@
 </div>
 <hr>
 <div id="footer_container">
-    <img id="footer_logo" src="logo">
+    <img id="footer_logo" src="frontend/media/logo.svg">
     <p id="footer_credits">FT_Transcendence ha sido creado por el equipo El Fin de la Cosa para 42 Málaga.<br><br>
     [NOMBRE 1] - frontend<br>
     [NOMBRE 2] - frontend<br>
