--- a/app/frontend/pong/pong.html
+++ b/app/frontend/pong/pong.html
@@ -103,7 +103,7 @@
         <div id="message"></div>
     </div>
 
-	{% csrf_token %}
+    <p hidden> {% csrf_token %} </p>
 
     <script src="Player.js"></script>
     <script src="Ball.js"></script>
