--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/css/basic.css">
     <script src='/bootstrap/js/bootstrap.min.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/jwt-decode/build/jwt-decode.min.js" defer></script>
+    <script src="js/frontenv.js" defer></script>
     <script src="js/login.js" defer></script>
     <script src='/js/common.js' defer></script>
     <script src='/js/router-lang.js' defer></script>
