Added bootstrap alerts

--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,22 +16,28 @@
     <script src='/js/common.js' defer></script>
     <script src='/js/router-lang.js' defer></script>
 </head>
+
 <body>
-<video autoplay muted loop id="bg_video">
-    <source src="../media/LANDING_VIDEO.mp4" type="video/mp4">
-</video>
-<div class="tr_header" id="header">
-    <!--header here-->
-</div>
-
-<div>
-    <div id="content">
-        <!-- Dynamic content will be loaded here -->
+    <video autoplay muted loop id="bg_video">
+        <source src="../media/LANDING_VIDEO.mp4" type="video/mp4">
+    </video>
+    <div class="tr_header" id="header">
+        <!--header here-->
     </div>
-</div>
 
-<div id="footer_container"></div>
+    <div class="alert_container" id="alert_container">
+        <!-- Alerts will be loaded here -->
+    </div>
+
+    <div>
+        <div id="content">
+            <!-- Dynamic content will be loaded here -->
+        </div>
+    </div>
+
+    <div id="footer_container"></div>
     <!--footer here-->
-</div>
+    </div>
 </body>
+
 </html>
