--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TRASCENDENCE</title>
+    <title>TRANSCENDENCE</title>
     <meta name="description" content="">
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/styles.css">
@@ -34,7 +34,7 @@
             <!-- Dynamic content will be loaded here -->
         </div>
     </div>
-
+    <hr class="hr_footer">
     <div id="footer_container"></div>
     <!--footer here-->
     </div>
