Updated and created new frontend assets

--- a/app/frontend/html/tournament_create.html
+++ b/app/frontend/html/tournament_create.html
@@ -30,6 +30,7 @@
         <div class="form_body_xl">
             <p class="form_title">Crear nuevo torneo</p>
             <div class="tour_create_subscroll">
+                <input class="form_field_with_margin" type="text" placeholder="Nombre del torneo"/>
                 <input class="form_field_with_margin" type="text" placeholder="Jugador 1"/>
                 <input class="form_field_with_margin" type="text" placeholder="Jugador 2"/>
                 <input class="form_field_with_margin" type="text" placeholder="Jugador 3"/>
@@ -44,3 +45,5 @@
         </div>
     </div>
 </form>
+</body>
+</html>
