Added outside connections and started finishing touches on friends

--- a/app/frontend/html/settings.html
+++ b/app/frontend/html/settings.html
@@ -41,7 +41,7 @@
                 <input type="checkbox" class="form_embedded_checkbox">
             </div>
             <button class="form_settings_button">Cambiar foto de perfil</button>
-            <a href="friend_list_editor.html"><button class="form_settings_button">Añadir/Eliminar amigos</button></a>
+            <a href="#friends"><button class="form_settings_button">Añadir/Eliminar amigos</button></a>
             <button class="form_settings_button">Anonimizar cuenta</button>
             <button class="form_settings_button">Eliminar cuenta [!]</button>
             <p class="form_label">Idioma preferido: Español</p>
