Pong & TTT stat update

--- a/app/frontend/pong/pong.html
+++ b/app/frontend/pong/pong.html
@@ -75,7 +75,7 @@
             font-weight: bold;
             color: #ffc3ff;
             display: none; /* Hidden by default */
-			cursor: pointer;
+                        cursor: pointer;
         }
         #bg_video {
             display: none;
@@ -84,6 +84,9 @@
             display: none;
         }
         #footer_container {
+            display: none;
+        }
+        .hr_footer {
             display: none;
         }
     </style>
@@ -154,4 +157,3 @@
     </script>
 </body>
 </html>
-
