Added alternative login.html and register.html pages

--- a/app/frontend/html/login.html
+++ b/app/frontend/html/login.html
@@ -31,7 +31,10 @@
             <p class="form_label">MAIL</p>
             <input class="form_field" type="text"/>
             <p class="form_label">CONTRASEÑA</p>
-            <input class="form_field" type="password"/>
+            <div class="form_field_with_button_container_password">
+                <input class="form_field_with_button_password" type="password"/>
+                <button class="form_embedded_submit_button">👁</button>
+            </div>
             <button class="form_main_button">ENTRAR</button>
             <p class="form_bottom">¿No tienes cuenta?</p>
             <a href="register.html" class="form_link">Registrate aqui</a>
