Finished tournaments, fixed home image, changed footer

--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -15,9 +15,12 @@
     <script src="js/login.js" defer></script>
     <script src='/js/common.js' defer></script>
     <script src='/js/router-lang.js' defer></script>
+    <script id="firefixer">
+        const FIREFIXER = true;
+    </script>
 </head>
 
-<body>
+<body style="background-color: black;">
     <video autoplay muted loop id="bg_video">
         <source src="../media/LANDING_VIDEO.mp4" type="video/mp4">
     </video>
