--- a/app/frontend/pong/pong.html
+++ b/app/frontend/pong/pong.html
@@ -112,7 +112,7 @@
 
     <div id="game-board">
         <canvas id="game_display" class="crt"></canvas>
-        <div id="message"></div>
+        <div>Player <span id="message"></span> has won!</div>
     </div>
 
     <p hidden> {% csrf_token %} </p>
